--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,37 @@ body {
 
 
 
-header .fond video {
+header .fond img {
   width: 100%;
-  height: 680px;
+  height: 1080px;
   object-fit: cover; 
+}
+
+header .fond .h1 {
+  margin-top: -280px;
+  color: white;
+  font-weight: 500;
+  font-size: 37px;
+  margin-left: 270px;
+}
+
+header .fond .lienn{
+  margin-top: 40px;
+}
+
+header .fond .lien{
+  color: white;
+  border: 1px solid;
+  border-radius: 1px 14px 14px 14px;
+  font-family: 'Poppins';
+  font-weight: 600;
+  padding: 12px 30px;
+  margin-left: 275px;
+  transition: color 0.3s ease;
+}
+
+header .fond .lien:hover{
+ border: 3px solid;
 }
 
 header .navlist {
@@ -95,7 +122,7 @@ header .navlist .icon a {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 46px;
+  margin-top: 276px;
 }
 
 .produits .sellers a {
